Fix a small link

--- a/client_report.html
+++ b/client_report.html
@@ -24,7 +24,7 @@
     <p><strong>How did you communicate with your client? Any issues?</strong> I sent the published site link, asked for feedback after updates, and confirmed when changes were live. Communication was clear and there were no major issues.</p>
     <p><strong>How did you publish the site and share it?</strong> I published using GitHub Pages and verified the live URL after pushing updates. I shared the link with the client and my junior developers so everyone could review the current version.</p>
     <p><strong>How was your experience managing the site with GitHub?</strong> It was a good learning experience. Pulling before editing and pushing updates helped avoid overwriting each other’s work, and GitHub Pages made it easy to verify changes.</p>
-    <p><a href="https://ynbyt9d8cn-prog.github.io/wdd130-smedley/" target="_blank">View the lead developer site</a></p>
+    <p><a href="https://ynbyt9d8cn-prog.github.io/wwd130-smedley/" target="_blank">View the lead developer site</a></p>
 
     <h2>Junior Developer Report</h2>
     <p><strong>How did you communicate with your team leads? Any issues?</strong> I confirmed my page assignments early and provided updates when my pages were completed. The main issue I ran into was being blocked when a lead developer had not yet pushed the required HTML/CSS structure.</p>
