add nav to client report

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <a href="wwr/index.html">WWR</a>
     <a href="ice.html">ICE</a>
     <a href="about.html">About Me</a>
+    <a href="client_report.html">Client Report</a>
   </nav>
 
  
