--- a/client_report.html
+++ b/client_report.html
@@ -11,6 +11,15 @@
     <h1>Client/Developer Team Project Report</h1>
   </header>
 
+   <nav>
+    <a href="index.html">Home</a>
+    <a href="wwr/index.html">WWR</a>
+    <a href="ice.html">ICE</a>
+    <a href="about.html">About Me</a>
+    <a href="client_report.html">Client Report</a>
+
+  </nav>
+
   <main>
     <h2>Client Report</h2>
     <p><strong>How did you decide what content and images to use?</strong> I used the site plan to choose content that clearly explained the purpose of the site and supported the theme. I selected images that matched the topic and helped the pages feel complete and consistent with the wireframe.</p>
