change to report

--- a/client_report.html
+++ b/client_report.html
@@ -22,23 +22,23 @@
 
   <main>
     <h2>Client Report</h2>
-    <p><strong>How did you decide what content and images to use?</strong> I used the site plan to choose content that clearly explained the purpose of the site and supported the theme. I selected images that matched the topic and helped the pages feel complete and consistent with the wireframe.</p>
-    <p><strong>How did you communicate with your developer? Any issues?</strong> I communicated by sharing the site plan, links, and feedback as pages were published. Communication was mostly smooth, and when issues came up, they were usually related to waiting for files to be pushed before work could continue.</p>
-    <p><strong>Did your developer meet your expectations?</strong> Yes. The homepage was published correctly and updated with CSS styling to match the site plan and wireframe.</p>
-    <p><strong>What will you do differently next time?</strong> Next time I would set clearer deadlines and check-in times, and I would confirm file structure (CSS file name, image folder, link paths) earlier so fewer small issues slow down progress.</p>
+    <p><strong>How did you decide what content and images to use?</strong> I used the site plan to choose content that clearly explained the purpose of the site and supported the theme. I was very slow to select the images and send them to my lead dev so in the end it was my fault that they didn't make it into the website.</p>
+    <p><strong>How did you communicate with your developer? Any issues?</strong> I communicated by sharing the site plan, links, and a little feedback as pages were published. Communication was mostly smooth, and when issues came up, they were usually related to waiting for files to be pushed before work could continue. Overall the developers did a great job at keeping things clear with me</p>
+    <p><strong>Did your developer meet your expectations?</strong> Yes. The homepage was published correctly and updated with CSS styling to match the site plan and wireframe. I did a poor job at comunicating my vision so I can't expect anything better than what was done.</p>
+    <p><strong>What will you do differently next time?</strong> Next time I would set clearer deadlines and check-in times, and I would confirm file structure (CSS file name, image folder, link paths) earlier so fewer small issues slow down progress. Also now that I have done it I feel so much more confident to work with github and share what I am doing with others. I for sure would do a much better job.</p>
     <p><a href="https://cpurser655.github.io/wdd130-smith/" target="_blank">View the client site</a></p>
 
     <h2>Lead Developer Report</h2>
-    <p><strong>How did you manage your team and communicate tasks?</strong> I shared the repository, provided the expected page assignments, and made sure junior developers knew to use the same stylesheet and pull changes before editing.</p>
-    <p><strong>How did you communicate with your client? Any issues?</strong> I sent the published site link, asked for feedback after updates, and confirmed when changes were live. Communication was clear and there were no major issues.</p>
+    <p><strong>How did you manage your team and communicate tasks?</strong> I shared the repository, provided the assignments, and made sure junior developers knew to use the same stylesheet and pull changes before editing. I did do everything a bit late so it was not all compleated. I hope what is there shows the progress I have made and the work we did well.</p>
+    <p><strong>How did you communicate with your client? Any issues?</strong> I sent the published site link, asked for feedback after updates, and confirmed when changes were live. Communication was clear and there were no major issues. He did get me the final site plan about a day before the day it was all due so it is not quite perfect but we did our best.</p>
     <p><strong>How did you publish the site and share it?</strong> I published using GitHub Pages and verified the live URL after pushing updates. I shared the link with the client and my junior developers so everyone could review the current version.</p>
-    <p><strong>How was your experience managing the site with GitHub?</strong> It was a good learning experience. Pulling before editing and pushing updates helped avoid overwriting each other’s work, and GitHub Pages made it easy to verify changes.</p>
+    <p><strong>How was your experience managing the site with GitHub?</strong> It was a good learning experience. Pulling before editing and pushing updates helped avoid overwriting each other’s work, and GitHub Pages made it easy to verify changes. I also feel confident working with it now which is a world of difference from where I started. This project has helped me feel good about working with github and comunicating with others.</p>
     <p><a href="https://ynbyt9d8cn-prog.github.io/wwd130-smedley/" target="_blank">View the lead developer site</a></p>
 
     <h2>Junior Developer Report</h2>
-    <p><strong>How did you communicate with your team leads? Any issues?</strong> I confirmed my page assignments early and provided updates when my pages were completed. The main issue I ran into was being blocked when a lead developer had not yet pushed the required HTML/CSS structure.</p>
-    <p><strong>Did you know what was expected for each site?</strong> Yes. Each team had a site plan and homepage structure to follow, which made expectations clear.</p>
-    <p><strong>Were you able to contribute?</strong> Yes. I completed and styled my assigned pages for one team and communicated completion to the lead developer.</p>
+    <p><strong>How did you communicate with your team leads? Any issues?</strong> I was able to communicate with the team leads through phone. We had some problems comunicating when to do our work. The main issue I ran into was being blocked when a lead developer had not yet pushed the required HTML/CSS structure.</p>
+    <p><strong>Did you know what was expected for each site?</strong> Not really. With one of the site plans I knew exactly what was expected of me and it made the work a lot easier. the other site plan was quite confusing and I never was able to work on it so no for that one.</p>
+    <p><strong>Were you able to contribute?</strong> Yes. I completed and styled my assigned pages for one team and communicated completion to the lead developer. On the other page I was never able to do my work because there was never a home page to work off of. </p>
     <p><strong>Any GitHub issues?</strong> The biggest challenge was making sure I pulled the latest changes before editing to avoid conflicts. Once I followed that habit, it went smoothly.</p>
     <p>
       <a href="https://jared1883.github.io/wdd130-williams/" target="_blank">View junior dev site #1</a><br>
@@ -46,10 +46,10 @@
     </p>
 
     <h2>General Experience and Reflections</h2>
-    <p><strong>Most challenging part:</strong> The most challenging part was coordinating timing and making sure everyone had pushed the files needed before the next person could work. I overcame it by communicating clearly and checking the repo often.</p>
-    <p><strong>What did you enjoy most?</strong> I enjoyed seeing the site go from a plan to a real published project, and I liked learning how teamwork changes how you code and organize files.</p>
-    <p><strong>What would you do differently?</strong> I would create a shared checklist at the start and confirm consistent naming (CSS files, folders, and links) so the team stays aligned.</p>
-    <p><strong>Do you feel more confident now?</strong> Yes. This project made me more confident working with GitHub, communicating tasks, and contributing to a team project with real workflow steps like pull, commit, push, and publish.</p>
+    <p><strong>Most challenging part:</strong> The most challenging part was coordinating timing and making sure everyone had pushed the files needed before the next person could work. I take responsibilty for my errors and late start, this caused me to be behind and have to play catch up which was a problem. Also learning how to use github correctly took me quite some time. Now I feel much better with it though.</p>
+    <p><strong>What did you enjoy most?</strong> I enjoyed seeing the site go from a plan to a real published project. It also felt like a real world project which I loved. Having to work with people and deadlines was frustrating and hard but I feel like I learned the most from that. I also love working on multible sites at once to see how well they are working and diffrent levels of coding play out to make them.</p>
+    <p><strong>What would you do differently?</strong> I would create a shared checklist at the start and confirm consistent naming (CSS files, folders, and links) so the team stays aligned. I would also have asked for more help. I got kinda scared and this caused me to get behind and avoid the class. If I would have just locked in and done my work I feel like it would have ended much better in the end.</p>
+    <p><strong>Do you feel more confident now?</strong> Yes. This project made me more confident working with GitHub, communicating tasks, and contributing to a team project with real workflow steps like pull, commit, push, and publish. I loved it and am greatfull for it even though it was very hard for me to work with others in a job I am not confident in. Thank you for the great learing experinces.</p>
   </main>
 
   <footer>
